<resources>
    <string name="app_name">OpaynPropertyProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_hints">Email</string>
    <string name="password_hints">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="name">Name</string>
    <string name="agree_to_the">Agree to the</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="we_just_need_your_registered_mobile_number_to_reset_your_password">We just need your registered Mobile number to reset your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="set_the_new_password_for_your_account_so_you_can_login_to_your_account">Set the new password for your account so you can login to your account</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_4_digits_code">Enter 4 Digits Code</string>
    <string name="continue_text">Continue</string>
    <string name="send_new">send new</string>
    <string name="want_to_buy_property">Want to Buy Property</string>
    <string name="want_to_sell_property">Want to sell Property</string>
    <string name="create_account">Create Account</string>
    <string name="name_required">You Must Fill Name</string>
    <string name="email_required">You Must Fill Email</string>
    <string name="password_required">Password Must be fill</string>
    <string name="email_pattern">Email should be like abc@gmail.com</string>
    <string name="required_terms_and_condtion">You must agree terms and conditions</string>
    <string name="otp_send_again">OTP Send Again..!!</string>
    <string name="resend_otp_again_error">Something wrong when resend OTP, Try again</string>
    <string name="your_ads">Your Ads</string>
    <string name="search_your_ads">Search Your Ads</string>
    <string name="sell_type">Sell Type</string>
    <string name="property_type">Property Type</string>
    <string name="enter_location_manually">Enter Location Manually</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="next_step">Next Step</string>
    <string name="do_later">Do Later</string>
    <string name="sell_and_property_error">Please select sell type and Property Type</string>
    <string name="selected_state_city">Please Enter State and City</string>
    <string name="possession_status">Possession Status</string>
    <string name="square_feet">Square Feet</string>
    <string name="pin_code_error">Enter Pin Code</string>
    <string name="address_error">Enter Your Property Address</string>
    <string name="number_of_bathroom">Number of Bathroom</string>
    <string name="add">Add</string>
    <string name="area">Area</string>
    <string name="posted_by">Posted By</string>
    <string name="amenities">Amenities</string>
    <string name="age_of_property">Age of Property</string>
    <string name="entrance_facing">Entrance Facing</string>
    <string name="prev_step">Prev Step</string>
    <string name="price_range">Price Range</string>
    <string name="description">Description</string>
    <string name="visiter_review">Visiter Review</string>
    <string name="general_setting">General Setting</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="add_property">Add Property</string>
    <string name="faq">FAQ</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="wishlist">Wishlist</string>
    <string name="messages">Messages</string>
    <string name="chat">Chat</string>
    <string name="about_us">About Us</string>
    <string name="app_version">App Version</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="dummy">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using </string>
    <string name="possession_status2">Possession Status :</string>
    <string name="area_type">Area Type :</string>
    <string name="property_age">Property Age</string>
    <string name="furnishing_status">Furnishing Status</string>
    <string name="view_all">View All</string>
    <string name="recommended_properties_for_sales">Recommended Properties For Sales</string>
    <string name="luxury_properties_for_sales">Luxury Properties For Sales</string>
    <string name="my_property">My Property</string>
    <string name="finish">Finish</string>
    <string name="enter_your_property_description">Enter Your Property Description</string>
    <string name="v_uploadimage">Please upload images</string>
    <string name="home">Home</string>
    <string name="update_number">Update Number</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="account_setting">Account Setting</string>
    <string name="mobile_number_required">Please enter your mobile number</string>
    <string name="subject_query_required">Please Enter the Subject of Query</string>
    <string name="contactus">Contact Us</string>
    <string name="des_query_required">Please enter Description</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="favourite">Favourite</string>
    <string name="enter_message">Type Your message</string>
    <string name="filter">Filter</string>
    <string name="data_updated">User Data Updated</string>
    <string name="search_best_sales_properties">Search Best Sales Properties</string>
    <string name="error">Error</string>
    <string name="web_client_id">771958017542-0rtbejf5rhkjgigkfvmu7leee2nrg1d5.apps.googleusercontent.com</string>
    <string name="username_password">Please Enter User name and Password</string>


</resources>