<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignUpFragment.SignUpActivity">
<include
    android:id="@+id/signup_back_btn"
    layout="@layout/toolbar2_back_arrow"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/signup_Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/create_account"
                style="@style/login_signup_heading"
                 />
            <EditText
                android:id="@+id/signup_name"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/signup_Title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/login_signup_field"
                />
            <EditText
                android:id="@+id/signup_email"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:hint="@string/email_hints"
                app:layout_constraintTop_toBottomOf="@+id/signup_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/login_signup_field"
                />
            <EditText
                android:id="@+id/signup_password"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="@string/password_hints"
                app:layout_constraintTop_toBottomOf="@+id/signup_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/login_signup_field"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_terms"
                app:layout_constraintTop_toBottomOf="@+id/signup_password"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_checkbox_terms"
                    android:text="Agree to the Term &amp; Conditions"
                    android:paddingLeft="@dimen/_8sdp"
                    android:textColor="@color/sky_blue_700"
                    style="@style/CustomCheckbox02"/>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:id="@+id/signup_button"
                app:cornerRadius="@dimen/_150sdp"
                android:textSize="@dimen/_12sdp"
                android:text="@string/sign_up"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_terms"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/already_account_label"
                android:text="Already have an Account?"
                style="@style/segoe_ui_bold"
                android:textColor="@color/sky_blue_700"
                android:paddingTop="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_button"
                app:layout_constraintBottom_toTopOf="@+id/login_account_btn_Signup"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_account_btn_Signup"
                android:text="@string/login"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"
                style="@style/segoe_ui_bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>