<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".addAdsSlides.PricingAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">


        <TextView
            android:id="@+id/price_header"
            style="@style/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_range"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/price_input"
            style="@style/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangel_border"
            android:hint="10000$"
            android:padding="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_header" />


        <TextView
            android:id="@+id/description_heading"
            style="@style/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_input" />

        <EditText
            android:id="@+id/property_description"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/rectangel_border"
            android:gravity="start"
            android:hint="@string/enter_your_property_description"
            app:layout_constraintTop_toBottomOf="@+id/description_heading" />

        <TextView
            android:id="@+id/show_des_count"
            style="@style/text_header"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rectangel_border"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:text="0/250"

            android:textAlignment="textStart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/property_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_container_ads4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pre_btn_finish"
            style="@style/button"
            android:backgroundTint="@color/red"
            android:text="@string/prev_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/finish_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_btn"
            style="@style/button"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pre_btn_finish"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>