<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".addAdsSlides.AddAdsFragment4"
    android:padding="@dimen/_16sdp">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/price_header"
           style="@style/header"
           android:textAlignment="textStart"
           android:text="@string/price_range"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/add_price_container"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/price_header">

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/price_input"
           style="@style/ads_edittext_hint"
           android:hint="10000$"
           android:layout_weight="1"
           android:background="@drawable/rectangel_border"
           />
       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/price_add_btn"
           android:text="@string/add"
           android:layout_weight="0.5"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/price_show"
           style="@style/ads_header"
           android:layout_weight="1"
            />
       </LinearLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/description_heading"
           style="@style/header"
           android:textAlignment="textStart"
           android:text="@string/description"
           app:layout_constraintTop_toBottomOf="@+id/add_price_container"
           app:layout_constraintLeft_toLeftOf="parent"/>
       <EditText
           android:layout_width="match_parent"
           android:layout_height="@dimen/_130sdp"
           android:id="@+id/property_description"
           style="@style/ads_edittext_hint"
           android:hint="Enter Your Property Description "
           android:background="@drawable/rectangel_border"
           app:layout_constraintTop_toBottomOf="@+id/description_heading"
           />
       <TextView
           android:id="@+id/show_des_count"
           android:background="@drawable/rectangel_border"
           android:text="100/250"
           style="@style/ads_header"
           app:layout_constraintTop_toBottomOf="@+id/property_description"
           app:layout_constraintRight_toRightOf="parent"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/button_container_ads4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pre_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/prev_step"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/next_btn_ads2"
            app:layout_constraintBottom_toBottomOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn_ads2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/next_step"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pre_btn"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>