<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    android:background="@color/white"
    tools:context=".addAdsSlides.AddAdsFragment2">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/ads2_nested_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_container_ads2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="37dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/possession_status_heading"
                style="@style/ads_header"
                android:text="@string/possession_status"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_possession_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/possession_status_heading"
                app:spanCount="3"
                tools:listitem="@layout/possession_view_holder" />

            <TextView
                android:id="@+id/possession_square_ft_heading"
                style="@style/ads_header"
                android:drawableRight="@drawable/ic_ruler"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/square_feet"
                app:layout_constraintBottom_toTopOf="@+id/sqft_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_possession_list" />

            <EditText
                android:id="@+id/sqft_input"
                style="@style/ads_edittext_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangel_border"
                android:hint="1000sqft"
                android:padding="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/possession_square_ft_heading" />



            <TextView
                android:id="@+id/number_of_bed"
                style="@style/ads_header"
                android:drawableRight="@drawable/ic_double_bed"
                android:drawablePadding="@dimen/_8sdp"
                android:text="Number of bed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sqft_input" />

            <EditText
                android:id="@+id/ads_beds"
                style="@style/ads_edittext_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="1Bed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_of_bed" />



            <TextView
                android:id="@+id/number_of_bathroom"
                style="@style/ads_header"
                android:drawableRight="@drawable/ic_shower_curtain"
                android:drawablePadding="@dimen/_8sdp"
                android:text="@string/number_of_bathroom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ads_beds" />

            <EditText
                android:id="@+id/ads_bathrrom"
                style="@style/ads_edittext_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bathroom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_of_bathroom" />



            <TextView
                android:id="@+id/area"
                style="@style/ads_header"
                android:text="@string/area"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ads_bathrrom" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/area"
                app:spanCount="3"
                tools:listitem="@layout/area_view_holder" />

            <TextView
                android:id="@+id/posted_by"
                style="@style/ads_header"
                android:text="@string/posted_by"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_area" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_posted_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posted_by"
                app:spanCount="3"
                tools:listitem="@layout/posted_by_view_holder" />

            <TextView
                android:id="@+id/amenities_header"
                style="@style/ads_header"
                android:text="@string/amenities"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_posted_by" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_amenities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amenities_header"
                app:spanCount="3"
                tools:listitem="@layout/amenities_view_holder" />

            <TextView
                android:id="@+id/age_of_property_header"
                style="@style/ads_header"
                android:text="@string/age_of_property"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_amenities" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_age_of_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_of_property_header"
                app:spanCount="3"
                tools:listitem="@layout/age_of_property_view_holder" />

            <TextView
                android:id="@+id/entrance_facing_heading"
                style="@style/ads_header"
                android:text="@string/entrance_facing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_age_of_property" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_entrance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/entrance_facing_heading"
                app:spanCount="3"
                tools:listitem="@layout/entrance_view_holder" />

            <TextView
                android:id="@+id/furnishing_status_heading"
                style="@style/ads_header"
                android:text="Furnishing Status"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_entrance" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_furnishing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/furnishing_status_heading"
                app:spanCount="3"
                tools:listitem="@layout/furnishing_view_holder" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/button_container_ads2"
        app:layout_constraintTop_toBottomOf="@+id/ads2_nested_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pre_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/prev_step"
            app:cornerRadius="@dimen/_5sdp"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/next_btn_ads2"
            app:layout_constraintBottom_toBottomOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn_ads2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/next_step"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pre_btn"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>